k8s/dev-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: kong
spec:
  selector:
    app: echo
  ports:
  - name: http
    port: 80
    targetPort: 80
